--- a/mandalad/src/main/resources/com/purplefrog/mandalad/index.html
+++ b/mandalad/src/main/resources/com/purplefrog/mandalad/index.html
@@ -18,7 +18,7 @@
 -->
 
 <form action="upload2" method="post" enctype="multipart/form-data">
-    upload file : <input name="art" type="file"/>
+    upload image : <input name="art" type="file"/>
     <br>
     ring # : <input name="ring" type="text" />
     <br>
