--- a/mandalad/src/main/resources/com/purplefrog/mandalad/index.html
+++ b/mandalad/src/main/resources/com/purplefrog/mandalad/index.html
@@ -34,7 +34,7 @@
 </form>
 $rings:{r|
 <table style="display:inline">
-    <tr><td>$r.index$</td><td><img src="$r.imageURL$"></td></tr>
+    <tr><td>$r.index$ <br><a href="template?ring=$r.index$">template</a></td><td><img src="$r.imageURL$"></td></tr>
 </table>
 }$
 
